guestbook-go/guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: guestbook-ingress
spec:
  rules:
    - http:
        paths:
          - path: /hello/.*
            backend:
              serviceName: helloworld-service
              servicePort: 8080
          - path: /.*
            backend:
              serviceName: guestbook
              servicePort: 3000
